Update changelog for shape select

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ v0.4.11:
  * Decouple polygon tool UI from tool; trigger 'lc-polygon*' events
  * Fixed several bugs in SVG rendering
  * Fixed behavior of stroke width picker when switching tools
+ * Add ability to programmatically select a shape & move it (no GUI yet)
 
 v0.4.10:
  * Fix the text tool
